Moving to a tailwindcss layout

--- a/Manifest.json
+++ b/Manifest.json
@@ -3,7 +3,7 @@
   "info" :
   {
     "name" : "qxapp",
-    "summary" : "undefined",
+    "summary" : "this is a test",
     "description" : "undefined",
     "homepage" : "undefined",
     "license" : "MIT license",
